--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@remix-run/dev": "^2.8.1",
     "@remix-run/eslint-config": "^2.8.1",
     "@swc/core": "1.3.107",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
