--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start": "cross-env PAYLOAD_CONFIG_PATH=dist/payload.config.js NODE_ENV=production node dist/server.js",
     "generate:types": "payload generate:types",
     "clean": "shx rm -rf node_modules dist build public/build",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test": "jest --watch",
+    "jest:preview": "jest-preview",
+    "test:preview": "npm-run-all -p test jest:preview"
   },
   "dependencies": {
     "@payloadcms/bundler-vite": "^0.1.6",
@@ -34,10 +37,12 @@
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
     "@remix-run/eslint-config": "^2.8.1",
-    "@swc/core": "1.3.107",
+    "@swc/core": "^1.4.12",
+    "@swc/jest": "^0.2.36",
     "@tailwindcss/typography": "^0.5.12",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
@@ -45,6 +50,9 @@
     "@types/source-map-support": "^0.5.10",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preview": "^0.3.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
     "shx": "^0.3.4",
