--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "payload": "^2.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "source-map-support": "^0.5.21",
     "tiny-invariant": "^1.3.1"
   },
