--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
+    "@vercel/remix": "^2.8.1-patch.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.4",
