--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express": "^4.18.2",
     "flowbite-react": "^0.8.0",
     "html-to-react": "^1.7.0",
+    "ioredis": "^5.3.2",
+    "is-ip": "^5.0.1",
     "isbot": "^5.1.0",
     "morgan": "^1.10.0",
     "patch-package": "^8.0.0",
@@ -41,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-toggle-dark-mode": "^1.1.1",
+    "redis": "^4.6.13",
     "remix-utils": "^7.6.0",
     "source-map-support": "^0.5.21",
     "tiny-invariant": "^1.3.1",
