Prevent bots from performing post actions

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@remix-run/react": "^2.8.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "flowbite-react": "^0.8.0",
